fix: urgent tasks no longer shift left, and the border is restored.
this bug was introduced in bbe7ac3d9d759cd418bc952731fe8cb8c657cdaf. this fixes #109.

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -363,7 +363,7 @@ main>.container {
 
 /* urgent task */
 .task.urgent {
-  border-color: var(--highlight-clr);
+  border-left: 10px solid var(--highlight-clr);
 }
 
 .task.urgent .checkbox-container {
